# river-engine

./: .dockerignore  .env.example  .gitignore  2026-04-02-role-files-design.md  2026-04-02-spec-review.md  AGENTS.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.yml  flake.nix  iris.json  shell.nix
.claude/: settings.json
.obsidian/: workspace.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
archive-v3/river-adapter/: Cargo.toml
archive-v3/river-adapter/src/: lib.rs  registration.rs
archive-v3/river-migrate/: Cargo.toml
archive/river-adapter/: Cargo.toml  openapi.json
archive/river-adapter/src/: error.rs  traits.rs
archive/river-orchestrator/: Cargo.toml
archive/river-orchestrator/src/: external.rs  main.rs  supervisor.rs
archive/river-orchestrator/src/process/: port.rs
archive/river-orchestrator/src/resources/: mod.rs
archive/river-orchestrator/tests/: e2e_dyad_boot.rs  integration.rs
archive/river-snowflake/: Cargo.toml
archive/river-snowflake/src/: extract.rs  parse.rs
archive/river-snowflake/src/snowflake/: birth.rs  generator.rs
archive/river-snowflake/tests/: server_tests.rs
crates/river-cli/: Cargo.toml
crates/river-cli/src/: adapter.rs  http.rs  log.rs  main.rs  tui.rs
crates/river-context/: Cargo.toml
crates/river-context/examples/: five_channels.rs  test_build_context.rs
crates/river-context/src/: assembly.rs  format.rs  id.rs  lib.rs  openai.rs  request.rs  response.rs  tokens.rs  workspace.rs
crates/river-context/tests/: integration.rs
crates/river-context/tests/fixtures/channels/: development.txt
crates/river-context/tests/fixtures/conversations/: development.moves.txt  development.txt  memes.moves.txt  philosophy.txt  random.moments.txt
crates/river-core/: Cargo.toml
crates/river-core/src/: auth.rs  config.rs  error.rs  lib.rs  types.rs
crates/river-core/src/channels/: entry.rs  mod.rs
crates/river-core/src/snowflake/: birth.rs  generator.rs  id.rs  types.rs
crates/river-discord/: Cargo.toml
crates/river-discord/src/: adapter.rs  client.rs  commands.rs  config.rs  discord.rs  error.rs  gateway.rs  handler.rs  http.rs  lib.rs  main.rs  outbound.rs
crates/river-embed/: Cargo.toml
crates/river-embed/src/: chunk.rs  config.rs  embed.rs  http.rs  index.rs  main.rs  search.rs  store.rs
crates/river-gateway/: Cargo.toml
crates/river-gateway/assets/: context-view.html  graph-view.html
crates/river-gateway/src/: adapters.rs  birth.rs  channels.rs  config.rs  constitution.rs  context.rs  discord.rs  env_file.rs  flashes.rs  git.rs  identity.rs  jsonl_index.rs  lib.rs  logging.rs  main.rs  memory.rs  model.rs  moments.rs  policy.rs  preferences.rs  queue.rs  record.rs  server.rs  session.rs  shape.rs  state.rs  surface.rs  tools.rs  turn.rs  wake_prompt.rs  watchdog.rs  witness.rs
crates/river-gateway/src/agent/: channel.rs  context.rs  home_context.rs  mod.rs  task.rs  tools.rs
crates/river-gateway/src/api/: mod.rs  routes.rs
crates/river-gateway/src/channels/: entry.rs  log.rs  mod.rs  writer.rs
crates/river-gateway/src/conversations/: format.rs  mod.rs  path.rs  writer.rs
crates/river-gateway/src/coordinator/: bus.rs  events.rs  mod.rs
crates/river-gateway/src/db/: contexts.rs  memories.rs  messages.rs  mod.rs  schema.rs
crates/river-gateway/src/embeddings/: chunk.rs  mod.rs  note.rs  store.rs  sync.rs
crates/river-gateway/src/flash/: mod.rs  ttl.rs
crates/river-gateway/src/inbox/: format.rs  mod.rs  reader.rs  writer.rs
crates/river-gateway/src/loop/: context.rs  mod.rs  model.rs  queue.rs  state.rs
crates/river-gateway/src/memory/: embedding.rs  mod.rs  search.rs
crates/river-gateway/src/model/: client.rs  mod.rs  types.rs
crates/river-gateway/src/redis/: cache.rs  client.rs  coordination.rs  mod.rs  working.rs
crates/river-gateway/src/session/: mod.rs
crates/river-gateway/src/spectator/: compress.rs  curate.rs  format.rs  handlers.rs  mod.rs  moves.rs  prompt.rs  room.rs
crates/river-gateway/src/subagent/: mod.rs  queue.rs  runner.rs  types.rs
crates/river-gateway/src/tools/: adapters.rs  atomic.rs  communication.rs  context.rs  executor.rs  file.rs  heartbeat.rs  logging.rs  memory.rs  mod.rs  model.rs  registry.rs  scheduling.rs  search.rs  shell.rs  subagent.rs  sync.rs  web.rs
crates/river-gateway/tests/: iyou_test.rs  utterances_test.rs
crates/river-gateway/tests/fixtures/spectator/: identity.md  on-compress.md  on-pressure.md  on-turn-complete.md
crates/river-oneshot/: Cargo.toml
crates/river-oneshot/src/: memory.rs  types.rs
crates/river-oneshot/src/llm/: mod.rs
crates/river-oneshot/src/skills/: mod.rs
crates/river-orchestrator/: Cargo.toml
crates/river-orchestrator/src/: agents.rs  cli_builder.rs  config.rs  config_file.rs  env.rs  external.rs  http.rs  lib.rs  main.rs  model.rs  models.rs  registry.rs  respawn.rs  state.rs  supervisor.rs  validate.rs
crates/river-orchestrator/src/api/: mod.rs  routes.rs
crates/river-orchestrator/src/discovery/: gguf.rs  mod.rs  scanner.rs
crates/river-orchestrator/src/process/: health.rs  manager.rs  mod.rs
crates/river-orchestrator/src/resources/: device.rs  gpu.rs  memory.rs  mod.rs  tracker.rs
crates/river-orchestrator/tests/: e2e_dyad_boot.rs  helpers.rs  integration.rs  mock_llm.rs
crates/river-snowflake/: Cargo.toml
crates/river-snowflake/src/: cache.rs  extract.rs  lib.rs  main.rs  parse.rs  server.rs
crates/river-snowflake/src/snowflake/: birth.rs  generator.rs  mod.rs  types.rs
crates/river-tools/: Cargo.toml
crates/river-tools/src/: executor.rs  file.rs  lib.rs  logging.rs  model.rs  registry.rs  scheduling.rs  shell.rs  web.rs
crates/river-tui/: Cargo.toml
crates/river-tui/src/: adapter.rs  backchannel.rs  config.rs  format.rs  gateway.rs  http.rs  input.rs  lib.rs  main.rs  post.rs  render.rs  server.rs  state.rs  tui.rs
crates/river-worker/: Cargo.toml
crates/river-worker/src/: config.rs  http.rs  inbox.rs  llm.rs  main.rs  persistence.rs  state.rs  tools.rs  worker_loop.rs  workspace_loader.rs
docs/: Kanban.md  (+18 more)
(+537 files in other folders)
