[package]
name = "river-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait = "0.1"
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
