[package]
name = "river-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Types-only library for adapter ↔ worker communication"

[dependencies]
river-protocol = { path = "../river-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
