[package]
name = "river-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Process supervisor for River Engine"

[dependencies]
river-adapter = { path = "../river-adapter" }
river-protocol = { path = "../river-protocol" }

tokio = { workspace = true, features = ["process", "signal", "time"] }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6", features = ["trace"] }
regex = "1"
nix = { version = "0.29", features = ["signal"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3.10"
reqwest = { workspace = true }
river-context = { path = "../river-context" }
