[package]
name = "river-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "river"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
reqwest.workspace = true
river-core = { path = "../river-core" }
serde_json.workspace = true
tokio.workspace = true
