[package]
name = "river-context"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Context assembly library for River Engine workers"

[dependencies]
river-adapter = { path = "../river-adapter" }
serde = { workspace = true }
serde_json = { workspace = true }
