[package]
name = "river-context"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Context assembly library for River Engine workers"

[dependencies]
river-adapter = { path = "../river-adapter" }
river-protocol = { path = "../river-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
