[package]
name = "river-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
glob.workspace = true
jiff.workspace = true
libc.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
river-core = { path = "../river-core" }
rusqlite.workspace = true
serde.workspace = true
sha2.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
twilight-gateway.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
ulid.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
