[package]
name = "river-oneshot"
version = "0.1.0"
edition = "2021"
description = "Turn-based dual-loop agent CLI"

[dependencies]
# Workspace crates
river-core = { path = "../river-core" }
river-db = { path = "../river-db" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "6"

[[bin]]
name = "river-oneshot"
path = "src/main.rs"
