[package]
name = "river-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
river-core = { path = "../river-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
glob.workspace = true
regex.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.10"
