[package]
name = "river-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Terminal UI for River Engine debugging and local development"

[dependencies]
river-adapter = { path = "../river-adapter" }
river-context = { path = "../river-context" }
river-protocol = { path = "../river-protocol" }
river-snowflake = { path = "../river-snowflake" }

tokio = { workspace = true, features = ["sync", "time", "signal"] }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
