[package]
name = "river-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "River Engine TUI adapter"

[[bin]]
name = "river-tui"
path = "src/main.rs"

[dependencies]
river-adapter = { path = "../river-adapter" }
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
