[package]
name = "river-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "River Engine TUI — home channel viewer"

[[bin]]
name = "river-tui"
path = "src/main.rs"

[dependencies]
river-core = { path = "../river-core" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
chrono.workspace = true
anyhow.workspace = true
dotenvy = "0.15"
tracing.workspace = true
tracing-subscriber.workspace = true
notify = { version = "7.0", default-features = false, features = ["macos_kqueue"] }

[dev-dependencies]
